--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146737
     <div class="row5 text">
         <div class="container cf">
             <div class="col1">
-                <p id="changeable_description1"><b>A valid entry will consist of First name, Last name, valid email, age and telephone number. </b> Competition is valid for United Kingdom residents above the age of 18. One entry per person. Registration is requires NO payment or commitments.
+                <p id="changeable_description1"><b>A valid entry will consist of First name, Last name, valid email, age and telephone number. </b> Competition is valid for United Kingdom residents above the age of 18. One entry per person. Registration requires <strong>NO</strong> payment or commitments.
                 </p>
             </div>
             <div class="col2">
