--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146737
 
     <div class="row4 button">
         <div class="container">
-            <a href="https://bfahp.bemobtrk.com/click" class="button" id="changeable_button">Sign Up Now!</a>
+            <a href="https://bfahp.bemobtrk.com/go/dc2a69bf-9a29-431f-b197-bcc4c57aac30">Sign Up Now!</a>
         </div>
     </div>
 
@@ -95,7 +95,7 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146737
 
     <div class="row6 copyright">
         <div class="container">
-            <p>Copyright &copy; 2018 - All Rights Reserved | <a href="https://bfahp.bemobtrk.com/click" target="_blank" style="color:#818080">Privacy and Terms</a></p>
+            <p>Copyright &copy; 2018 - All Rights Reserved | <a href="https://bfahp.bemobtrk.com/go/dc2a69bf-9a29-431f-b197-bcc4c57aac30" target="_blank" style="color:#818080">Privacy and Terms</a></p>
         </div>
     </div>
 
