--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Playstation Giveaways</title>
+<title>WarFrame </title>
 <style>
 * {box-sizing: border-box;}
 .cf:before, .cf:after { display: block; content: ''; clear: both; }
@@ -15,22 +14,23 @@ a {text-decoration: none;}
 .row-border { height: 5px; }
 .container h1 { color: #fff; }
 
-body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v1467376995/page-bg-mobile-n13_vaksgp.jpg") center top; width: 100%; height: 100%; }
+body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v1467381465/page-bg-desktop-n13_bcifib.jpg") center top; width: 100%; height: 100%; }
 
-.container { width: 96%; margin: 0 auto; }
-.row1 .container h1 { margin: 30px 0 25px 0; font-size: 26px; }
+.container { width: 960px; margin: 0 auto; }
+.row1 .container h1 { margin: 50px 0 40px 0; font-size: 32px; }
 
-.row2 .container .outter-border img { display: block; width: 100%; }
+.row2 .container .outter-border img { display: block; width: 960px; max-height: 375px; }
 
-.row3 .container ul { width: 96%; margin: 40px auto 40px auto; }
-.row3 .container ul li { list-style-type: none; list-style-position: outside; margin: 15px 0; color: #DCDCDC; }
+.row3 .container ul { width: 95%; margin: 45px auto 45px auto; }
+.row3 .container ul li { list-style-type: none; list-style-position: inside; width: 50%; float: left; margin: 5px 0; color: #DCDCDC; }
 
 .row4 { background-color: rgba(0, 0, 0, 0.4); padding: 30px 0; }
 .row4 a.button { display: block; max-width: 300px; min-width: 250px; margin: 0 auto; padding: 15px 15px 12px 15px; text-transform: uppercase; text-align: center; font-weight: bold; text-shadow: 1px 1px 3px rgb(0, 0, 0); }
 .row4 a.button:hover { opacity: 0.85; }
 
-.row5 { padding: 2em 0; color: #818080; text-align: justify; line-height: 1.5em; font-size: 14px; }
-.row5 [class^="col"] { width: 96%; margin: 0 auto; }
+.row5 { padding: 70px 0; color: #818080; text-align: justify; line-height: 1.5em; font-size: 14px; }
+.row5 [class^="col"] { width: 48%; float: left; }
+.row5 .col2 { margin-left: 4%; }
 
 .row6 { padding: 10px; background-color: #000; text-align: center; color: #818080; font-size: 14px; }
 
@@ -50,15 +50,14 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146737
     <div class="row-border"></div>
 
     <div class="row1 title">
-        <div class="container">
-            <h1 class="txtc" id="changeable_headline">Chance to Win £100 PlayStation Store Credit. Register For Free Today !</h1>
+        <div class="container"><h1>Switch To WarFrame & Experience The Best Adrenaline Pumping Shooting Game, Brace Yourself!</h1>
         </div>
     </div>
 
     <div class="row2 image">
         <div class="container">
             <div class="outter-border">
-                <img id="changeable_image" src='play.jpg' alt="Illustration">
+                <img id="changeable_image" src='warframe.jpg' alt="Illustration">
             </div>
         </div>
     </div>
@@ -66,28 +65,28 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146737
     <div class="row3 list">
         <div class="container">
             <ul class="cf">
-                <li id="changeable_bullet1">PlayStation Store is the best place to shop the <b>latest games as soon as they are released</b></li>
-                <li id="changeable_bullet2">PlayStation Store always offer exclusive games, content and movies</li>
-                <li id="changeable_bullet3">Get huge discounts so you can get the most out of your credit.</b> </li>
-                <li id="changeable_bullet4">Sign Up Now & Win £100 PlayStation Store Credit, to buy a new challenging game</b></li>
+                <li id="changeable_bullet1">Experience engaging and intense science-fiction multiplayer combat </li>
+                <li id="changeable_bullet2">The game looks amazing, thanks to quality graphics, effects, and sound design</li>
+                <li id="changeable_bullet3">Game content updated regularly to keep all players on their toes</li>
+                <li id="changeable_bullet4">Sign Up For Free and Interact with other players in the game</b></li>
             </ul>
         </div>
     </div>
 
     <div class="row4 button">
         <div class="container">
-            <a href="https://bfahp.bemobtrk.com/go/dc2a69bf-9a29-431f-b197-bcc4c57aac30">Sign Up Now!</a>
+            <a href="https://bfahp.bemobtrk.com/go/5b35c828-763c-4aaf-957d-779bdaf05d85" class="button" id="changeable_button">Sign up Now</a>
         </div>
     </div>
 
     <div class="row5 text">
         <div class="container cf">
             <div class="col1">
-                <p id="changeable_description1"><b>A valid entry will consist of First name, Last name, valid email, age and telephone number. </b> Competition is valid for United Kingdom residents above the age of 18. One entry per person. Registration requires <strong>NO</strong> payment or commitments.
+                <p id="changeable_description1"> The game is constantly changing as the community makes its needs known, and all signs point to it continuing to change for the better.
                 </p>
             </div>
             <div class="col2">
-                <p id="changeable_description2">Once confirmed, all Winners will receive <b>£100 PlayStation Store Credit</b>. 
+                <p id="changeable_description2">Warframe is a fast-moving shooter that takes you zooming through space exploring spaceships, planets, and moons. Missions can be taken on alone or with others; either way, you earn resources and experience points (XP).
                 </p>
             </div>
         </div>
@@ -95,7 +94,7 @@ body { background: url("http://res.cloudinary.com/hkqmipqhy/image/upload/v146737
 
     <div class="row6 copyright">
         <div class="container">
-            <p>Copyright &copy; 2018 - All Rights Reserved | <a href="https://bfahp.bemobtrk.com/go/dc2a69bf-9a29-431f-b197-bcc4c57aac30" target="_blank" style="color:#818080">Privacy and Terms</a></p>
+            <p>Copyright &copy; 2018 - All Rights Reserved | <a href="https://bfahp.bemobtrk.com/go/5b35c828-763c-4aaf-957d-779bdaf05d85" target="_blank" style="color:#818080">Privacy and Terms</a></p>
         </div>
     </div>
 
